--- a/__coverage__/lcov-report/component/index.html
+++ b/__coverage__/lcov-report/component/index.html
@@ -23,30 +23,30 @@
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">85.01% </span>
+                <span class="strong">88.62% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>874/1028</span>
+                <span class='fraction'>912/1029</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">69.46% </span>
+                <span class="strong">74.04% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>91/131</span>
+                <span class='fraction'>97/131</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">89.47% </span>
+                <span class="strong">94.73% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>51/57</span>
+                <span class='fraction'>54/57</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">85.01% </span>
+                <span class="strong">88.62% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>874/1028</span>
+                <span class='fraction'>912/1029</span>
             </div>
         
             
@@ -85,8 +85,8 @@
 	</td>
 	<td data-value="100" class="pct high">100%</td>
 	<td data-value="84" class="abs high">84/84</td>
-	<td data-value="71.42" class="pct medium">71.42%</td>
-	<td data-value="14" class="abs medium">10/14</td>
+	<td data-value="61.53" class="pct medium">61.53%</td>
+	<td data-value="13" class="abs medium">8/13</td>
 	<td data-value="100" class="pct high">100%</td>
 	<td data-value="6" class="abs high">6/6</td>
 	<td data-value="100" class="pct high">100%</td>
@@ -109,48 +109,48 @@
 	</tr>
 
 <tr>
-	<td class="file high" data-value="index.ts"><a href="index.ts.html">index.ts</a></td>
-	<td data-value="91.46" class="pic high">
-	<div class="chart"><div class="cover-fill" style="width: 91%"></div><div class="cover-empty" style="width: 9%"></div></div>
+	<td class="file medium" data-value="index.ts"><a href="index.ts.html">index.ts</a></td>
+	<td data-value="74.39" class="pic medium">
+	<div class="chart"><div class="cover-fill" style="width: 74%"></div><div class="cover-empty" style="width: 26%"></div></div>
 	</td>
-	<td data-value="91.46" class="pct high">91.46%</td>
-	<td data-value="82" class="abs high">75/82</td>
-	<td data-value="83.33" class="pct high">83.33%</td>
-	<td data-value="12" class="abs high">10/12</td>
+	<td data-value="74.39" class="pct medium">74.39%</td>
+	<td data-value="82" class="abs medium">61/82</td>
+	<td data-value="55.55" class="pct medium">55.55%</td>
+	<td data-value="9" class="abs medium">5/9</td>
 	<td data-value="80" class="pct high">80%</td>
 	<td data-value="5" class="abs high">4/5</td>
-	<td data-value="91.46" class="pct high">91.46%</td>
-	<td data-value="82" class="abs high">75/82</td>
+	<td data-value="74.39" class="pct medium">74.39%</td>
+	<td data-value="82" class="abs medium">61/82</td>
 	</tr>
 
 <tr>
 	<td class="file high" data-value="processes.ts"><a href="processes.ts.html">processes.ts</a></td>
-	<td data-value="82.33" class="pic high">
-	<div class="chart"><div class="cover-fill" style="width: 82%"></div><div class="cover-empty" style="width: 18%"></div></div>
+	<td data-value="83.37" class="pic high">
+	<div class="chart"><div class="cover-fill" style="width: 83%"></div><div class="cover-empty" style="width: 17%"></div></div>
 	</td>
-	<td data-value="82.33" class="pct high">82.33%</td>
-	<td data-value="402" class="abs high">331/402</td>
-	<td data-value="73.07" class="pct medium">73.07%</td>
-	<td data-value="26" class="abs medium">19/26</td>
+	<td data-value="83.37" class="pct high">83.37%</td>
+	<td data-value="403" class="abs high">336/403</td>
+	<td data-value="78.57" class="pct medium">78.57%</td>
+	<td data-value="28" class="abs medium">22/28</td>
 	<td data-value="91.66" class="pct high">91.66%</td>
 	<td data-value="12" class="abs high">11/12</td>
-	<td data-value="82.33" class="pct high">82.33%</td>
-	<td data-value="402" class="abs high">331/402</td>
+	<td data-value="83.37" class="pct high">83.37%</td>
+	<td data-value="403" class="abs high">336/403</td>
 	</tr>
 
 <tr>
-	<td class="file medium" data-value="properties.ts"><a href="properties.ts.html">properties.ts</a></td>
-	<td data-value="77.88" class="pic medium">
-	<div class="chart"><div class="cover-fill" style="width: 77%"></div><div class="cover-empty" style="width: 23%"></div></div>
+	<td class="file high" data-value="properties.ts"><a href="properties.ts.html">properties.ts</a></td>
+	<td data-value="93.39" class="pic high">
+	<div class="chart"><div class="cover-fill" style="width: 93%"></div><div class="cover-empty" style="width: 7%"></div></div>
 	</td>
-	<td data-value="77.88" class="pct medium">77.88%</td>
-	<td data-value="303" class="abs medium">236/303</td>
-	<td data-value="60" class="pct medium">60%</td>
-	<td data-value="55" class="abs medium">33/55</td>
-	<td data-value="83.33" class="pct high">83.33%</td>
-	<td data-value="18" class="abs high">15/18</td>
-	<td data-value="77.88" class="pct medium">77.88%</td>
-	<td data-value="303" class="abs medium">236/303</td>
+	<td data-value="93.39" class="pct high">93.39%</td>
+	<td data-value="303" class="abs high">283/303</td>
+	<td data-value="75.43" class="pct medium">75.43%</td>
+	<td data-value="57" class="abs medium">43/57</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="18" class="abs high">18/18</td>
+	<td data-value="93.39" class="pct high">93.39%</td>
+	<td data-value="303" class="abs high">283/303</td>
 	</tr>
 
 </tbody>
@@ -161,7 +161,7 @@
             <div class='footer quiet pad2 space-top1 center small'>
                 Code coverage generated by
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
-                at 2025-02-23T08:35:46.325Z
+                at 2025-02-24T17:54:03.737Z
             </div>
         <script src="../prettify.js"></script>
         <script>
