--- a/__coverage__/lcov-report/component/index.ts.html
+++ b/__coverage__/lcov-report/component/index.ts.html
@@ -23,16 +23,16 @@
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">91.46% </span>
+                <span class="strong">74.39% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>75/82</span>
+                <span class='fraction'>61/82</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">83.33% </span>
+                <span class="strong">55.55% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>10/12</span>
+                <span class='fraction'>5/9</span>
             </div>
         
             
@@ -44,9 +44,9 @@
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">91.46% </span>
+                <span class="strong">74.39% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>75/82</span>
+                <span class='fraction'>61/82</span>
             </div>
         
             
@@ -61,7 +61,7 @@
             </div>
         </template>
     </div>
-    <div class='status-line high'></div>
+    <div class='status-line medium'></div>
     <pre><table class="coverage">
 <tr><td class="line-count quiet"><a name='L1'></a><a href='#L1'>1</a>
 <a name='L2'></a><a href='#L2'>2</a>
@@ -162,48 +162,39 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
 <span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
 <span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
 <span class="cline-any cline-yes">8x</span>
 <span class="cline-any cline-yes">8x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">4x</span>
-<span class="cline-any cline-yes">4x</span>
-<span class="cline-any cline-yes">4x</span>
-<span class="cline-any cline-yes">4x</span>
-<span class="cline-any cline-yes">4x</span>
-<span class="cline-any cline-yes">4x</span>
-<span class="cline-any cline-yes">4x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">3x</span>
+<span class="cline-any cline-yes">16x</span>
+<span class="cline-any cline-yes">16x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -212,10 +203,19 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">5x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">16x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -251,18 +251,18 @@ class Component&lt;D = undefined&gt; {
         meta
     }: ComponentEntry&lt;D&gt;) {
         this.data = data
-        if (meta instanceof Metadata) <span class="branch-0 cbranch-no" title="branch not covered" >{</span>
-<span class="cstat-no" title="statement not covered" >            this.meta = meta;</span>
-<span class="cstat-no" title="statement not covered" >        }</span>
-        else if (
-            meta !== undefined
-            &amp;&amp; meta !== null
-            &amp;&amp; typeof meta === "object"
-            &amp;&amp; Object.keys(meta).length &gt; 0
-        ) {
-            this.meta = new Metadata(meta);
+        if (meta instanceof Metadata) {
+            this.meta = meta;
         }
-<span class="cstat-no" title="statement not covered" ><span class="branch-0 cbranch-no" title="branch not covered" >        else {</span></span>
+<span class="cstat-no" title="statement not covered" ><span class="branch-0 cbranch-no" title="branch not covered" >        else if (</span></span>
+<span class="cstat-no" title="statement not covered" >            meta !== undefined</span>
+<span class="cstat-no" title="statement not covered" >            &amp;&amp; meta !== null</span>
+<span class="cstat-no" title="statement not covered" >            &amp;&amp; typeof meta === "object"</span>
+<span class="cstat-no" title="statement not covered" >            &amp;&amp; Object.keys(meta).length &gt; 0</span>
+<span class="cstat-no" title="statement not covered" >        ) {</span>
+<span class="cstat-no" title="statement not covered" >            this.meta = new Metadata(meta);</span>
+<span class="cstat-no" title="statement not covered" >        }</span>
+<span class="cstat-no" title="statement not covered" >        else {</span>
 <span class="cstat-no" title="statement not covered" >            this.meta = new Metadata();</span>
 <span class="cstat-no" title="statement not covered" >        }</span>
     }
@@ -280,19 +280,19 @@ class Component&lt;D = undefined&gt; {
         const storedHash = this.meta.annotations.hash;
 &nbsp;
         if (storedHash === 'not-set'
-            || storedHash === undefined
-            || storedHash === hashedData
+            || <span class="branch-0 cbranch-no" title="branch not covered" >storedHash === undefined</span>
+            || <span class="branch-0 cbranch-no" title="branch not covered" >storedHash === hashedData</span>
         ) {
             this.meta.annotations.set('hash',  hashedData);
         }
-        
-        else if (
-            storedHash !== 'not-set'
-            &amp;&amp; storedHash !== undefined
-            &amp;&amp; storedHash !== hashedData
-        ) {
-            throw new Error(`Hash mismatch: ${storedHash} !== ${hashedData}`);
-        }
+<span class="cstat-no" title="statement not covered" ><span class="branch-0 cbranch-no" title="branch not covered" >        </span></span>
+<span class="cstat-no" title="statement not covered" >        else if (</span>
+<span class="cstat-no" title="statement not covered" >            storedHash !== 'not-set'</span>
+<span class="cstat-no" title="statement not covered" >            &amp;&amp; storedHash !== undefined</span>
+<span class="cstat-no" title="statement not covered" >            &amp;&amp; storedHash !== hashedData</span>
+<span class="cstat-no" title="statement not covered" >        ) {</span>
+<span class="cstat-no" title="statement not covered" >            throw new Error(`Hash mismatch: ${storedHash} !== ${hashedData}`);</span>
+<span class="cstat-no" title="statement not covered" >        }</span>
 &nbsp;
         return hashedData;
     }
@@ -313,7 +313,7 @@ export * from './properties';</pre></td></tr></table></pre>
             <div class='footer quiet pad2 space-top1 center small'>
                 Code coverage generated by
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
-                at 2025-02-23T08:35:46.325Z
+                at 2025-02-24T17:54:03.737Z
             </div>
         <script src="../prettify.js"></script>
         <script>
